syntax = "proto3";

package rivet.backend.pkg.mm.msg.lobby_closed_set;

import "proto/common.proto";

/// name = "msg-mm-lobby-closed-set"
/// parameters = [
/// 	{ name = "lobby_id" },
/// ]
message Message {
	rivet.common.Uuid lobby_id = 1;
	bool is_closed = 2;
}

